# icalendar

./: .rules  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
benches/: allocation_profile.rs  icalendar_benchmarks.rs
docs/: benchmarking-plan.md  refactoring-cow-yoke-unification.md  refactoring-options.md
docs/benchmark-results/: TEMPLATE.md  baseline.md
examples/: alarm-jiff.rs  alarm.rs  attendee_parse.rs  change_status.rs  default.rs  full_circle.rs  ical_to_json.rs  itineraries.rs  json_to_ical.rs  parse.rs  parse_advanced.rs  participant.rs  rdate.rs  readme-parse.rs  readme.rs  recurrence.rs  recurrence_all_day.rs  recurrence_id.rs  recurrence_parse.rs  recurrence_with_tz.rs  removing_properties.rs  rfc9073.rs  timezone.rs  todos.rs
fixtures/: event_attendees_mixed_complexity.ics  event_five_attendees.ics  event_two_attendees.ics
fixtures/ical-js/: README.md
fixtures/icalendar-rb/: event.ics  event_attendees_mixed_complexity.ics  event_minimal_attendees.ics  two_events.ics
fixtures/rfc9073/: concert.ics
src/: assert.rs  calendar.rs  components.rs  event_publishing.rs  lib.rs  properties.rs  recurrence.rs  value_types.rs
src/calendar/: calendar_component.rs
src/components/: alarm.rs  date_time.rs  event.rs  other.rs  participant.rs  todo.rs  venue.rs
src/parser/: calendar.rs  components.rs  mod.rs  parameters.rs  parsed_string.rs  properties.rs  utils.rs
src/properties/: attendee.rs
tests/: alarm.rs  full_circle.rs  parse_attendees.rs  parse_fixtures.rs  parse_recurrence.rs  reserialize.rs  rfc9073_multi_instance.rs  todo_uid_preservation.rs
tests/rfc9073/: multi_instance_properties.rs
