[package]
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
name = "icalendar"
version = "0.17.10"
license = "MIT/Apache-2.0"
edition = "2024"

description = "Strongly typed iCalendar builder and parser."
keywords = ["ical", "icalendar", "parser", "RFC5545", "RFC7986"]
categories = ["date-and-time", "data-structures", "parsing"]

documentation = "https://docs.rs/icalendar/"
repository = "https://github.com/hoodie/icalendar"
readme = "README.md"

rust-version = "1.88"
exclude = ["fixtures", ".github", ".gitignore", "*.json"]

[features]
default = ["parser"]
parser = ["dep:nom", "dep:nom-language"]
strict-dates = []
chrono-tz = ["dep:chrono-tz"]
recurrence = ["dep:rrule", "chrono-tz", "dep:thiserror"]

[dependencies]
serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_json = { version = "1.0.149", optional = true }
iso8601 = "0.6"
chrono-tz = { version = "0.10", optional = true }
time = { version = "0.3.47", optional = true }
thiserror = { version = "2.0.18", optional = true }

[dependencies.chrono]
version = "0.4.44"
default-features = false
features = ["clock", "std", "wasmbind"]

[dependencies.nom]
version = "8"
optional = true

[dependencies.nom-language]
version = "0.1"
optional = true

[dependencies.rrule]
version = "0.14"
optional = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.uuid]
features = ["v4"]
version = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies.uuid]
features = ["v4", "js"]
version = "1"

[dev-dependencies]
pretty_assertions = "1"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "parse"
path = "examples/parse.rs"
required-features = ["parser"]

[[example]]
name = "readme_parse"
path = "examples/readme-parse.rs"
required-features = ["parser", "chrono-tz"]

[[example]]
name = "parse_advanced"
path = "examples/parse_advanced.rs"
required-features = ["parser"]

[[example]]
name = "ical_to_json"
path = "examples/ical_to_json.rs"
required-features = ["parser", "serde", "serde_json"]

[[example]]
name = "json_to_ical"
path = "examples/json_to_ical.rs"
required-features = ["parser", "serde", "serde_json"]

[[example]]
name = "full_circle"
path = "examples/full_circle.rs"
required-features = ["parser"]

[[example]]
name = "parsed_property"
path = "examples/custom_property_parsed.rs"
required-features = ["parser"]

[[example]]
name = "timezone"
path = "examples/timezone.rs"
required-features = ["chrono-tz"]

[[example]]
name = "recurrence_all_day"
path = "examples/recurrence_all_day.rs"
required-features = ["recurrence"]

[[example]]
name = "recurrence_with_tz"
path = "examples/recurrence_with_tz.rs"
required-features = ["recurrence", "chrono-tz"]

[[example]]
name = "recurrence_id"
path = "examples/recurrence_id.rs"
required-features = ["recurrence", "chrono-tz"]

[[example]]
name = "rdate"
path = "examples/rdate.rs"
required-features = ["recurrence", "chrono-tz"]

[[example]]
name = "attendee_parse"
path = "examples/attendee_parse.rs"
required-features = ["parser"]

[[example]]
name = "recurrence_parse"
path = "examples/recurrence_parse.rs"
required-features = ["recurrence", "parser"]
